  empty
- #177: Add handling of schema import errors
- #175: Deploying a database without a schema.sql fails even if dbX_schema is
  empty
- #195: Add --no-dep-tags option to wadf-reprocess
- #196: Rewrite template handling to remove dependency on UNIX "find" command
  (for portability)
- #198: Improve general error handling

#######################################################################
# v0.11.2 (11 Feb 2009)
#######################################################################
Remove some debugging output that appears when deploying using a dependency
tags file; it was inadvertently left in. No functional changes.

Bugs fixed:
- #164: Debugging output present when using dependency tags file


#######################################################################
# v0.11.1 (2 Feb 2009)
#######################################################################
Fix a silly bug introduced with some refactoring in 0.11.0, improve the
performance when deploying PEAR dependencies using dependency tags and make
undeployment more reliable.

Bugs fixed:
- #158: E_NOTICES relating to standalone_pear
- Fix wadf-undeploy so that database details are prompted for if necessary

Changes/improvements:
- #157: When deploying PEAR dependencies from dependency tags, check if they are
  already installed before force-installing 
- #160: wadf-deploy / reprocess should use dependency tags exclusively if they 
  are defined
- Improve the output of wadf-deploy to make it clearer which database(s) are
  going to be removed
- #161: Improve WADF HTTPD server default output page (list of applications)
- #162: Remove hardcoded references to system command "rm" (part of a long term
  goal to improve portability)


#######################################################################
# v0.11.0 (29 Jan 2009)
#######################################################################
Add ability to deploy SVN dependencies and make some minor improvements
to the command line interface.
